--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -304,8 +304,8 @@
   "Manual": "Manual",
   "Earn CAKE, stake CAKE": "Earn RABBIT, stake RABBIT",
   "This bounty is given as a reward for providing a service to other users.": "This bounty is given as a reward for providing a service to other users.",
-  "Whenever you successfully claim the bounty, you’re also helping out by activating the Auto CAKE Pool’s compounding function for everyone.": "Whenever you successfully claim the bounty, you’re also helping out by activating the Auto Collect Pool’s compounding function for everyone.",
-  "Auto-Compound Bounty: %fee%% of all Auto CAKE pool users pending yield": "Auto-Compound Bounty: %fee%% of all Auto Collect pool users pending yield",
+  "Whenever you successfully claim the bounty, you’re also helping out by activating the Auto CAKE Pool’s compounding function for everyone.": "Whenever you successfully claim the bounty, you’re also helping out by activating the Auto Rabbit Pools compounding function for everyone.",
+  "Auto-Compound Bounty: %fee%% of all Auto CAKE pool users pending yield": "Auto-Compound Bounty: %fee%% of all Auto Rabbit Pool users pending yield",
   "Bounty collected!": "Bounty collected!",
   "CAKE bounty has been sent to your wallet.": "Collect bounty has been sent to your wallet.",
   "Claim Bounty": "Claim Bounty",
