--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -510,7 +510,7 @@
   "Prediction (BETA)": "Prediction (BETA)",
   "Leaderboard": "Leaderboard",
   "Tokens": "Tokens",
-  "Contact": "Contact",
+  "Contact Us": "Contact Us",
   "The higher your team’s rank, the better your prizes!": "The higher your team’s rank, the better your prizes!",
   "Get Ready": "Get Ready",
   "Activate PancakeSwap Profile to take part in next IFO‘s!": "Activate PancakeSwap Profile to take part in next IFO‘s!",
