--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -1049,7 +1049,7 @@
   "The Locked Price & Closed Price are exactly the same (within 8 decimals), so neither side wins. All funds entered into UP and DOWN positions will go to the weekly CAKE burn.": "The Locked Price & Closed Price are exactly the same (within 8 decimals), so neither side wins. All funds entered into UP and DOWN positions will go to the weekly CAKE burn.",
   "To Burn": "To Burn",
   "Account": "Account",
-  "PancakeSwap Info & Analytics": "PancakeSwap Info & Analytics",
+  "RabbitCoin Info & Analytics": "RabbitCoin Info & Analytics",
   "Top Tokens": "Top Tokens",
   "Top Pools": "Top Pools",
   "Your Watchlist": "Your Watchlist",
