--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -66,7 +66,7 @@
   "Winning Tickets": "Winning Tickets",
   "Enable Contract": "Enable Contract",
   "%asset% staked": "%asset% staked",
-  "Total Value Locked": "RabbitCoin holders collect more tokens",
+  "Total Value Locked": "RabbitCoin holders accumulate additional tokens!",
   "Profile Setup": "Profile Setup",
   "Get Starter Collectible": "Get Starter Collectible",
   "Set Profile Picture": "Set Profile Picture",
@@ -188,9 +188,9 @@
   "Claim": "Claim",
   "Any funds you stake in this pool will be automagically harvested and restaked (compounded) for you.": "Any funds you stake in this pool will be automagically harvested and restaked (compounded) for you.",
   "Total staked": "Total staked",
-  "Just stake some tokens to earn.": "Just stake some tokens to earn.",
-  "High APR, low risk.": "High APR, low risk.",
-  "Stake LP tokens to earn.": "Stake LP tokens to earn.",
+  "Earn effortlessly by staking your tokens.": "Earn effortlessly by staking your tokens.",
+  "With high APR and low risk, its a win-win!": "With high APR and low risk, its a win-win!",
+  "Stake LP tokens to start earning!": "Stake LP tokens to start earning!",
   "Basic Sale": "Basic Sale",
   "Unlimited Sale": "Unlimited Sale",
   "No limits on the amount you can commit. Additional fee applies when claiming.": "Each account can mint only 2 NFTs. Public minting is only available for a limited time.",
@@ -303,8 +303,8 @@
   "Auto": "Auto",
   "Manual": "Manual",
   "Earn CAKE, stake CAKE": "Earn RABBIT, stake RABBIT",
-  "This bounty is given as a reward for providing a service to other users.": "This bounty is given as a reward for providing a service to other users.",
-  "Whenever you successfully claim the bounty, you’re also helping out by activating the Auto CAKE Pool’s compounding function for everyone.": "Whenever you successfully claim the bounty, you’re also helping out by activating the Auto Rabbit Pools compounding function for everyone.",
+  "Earn this bounty as a reward for assisting fellow users.": "Earn this bounty as a reward for assisting fellow users.",
+  "Whenever you successfully claim the bounty, you’re also helping out by activating the Auto CAKE Pool’s compounding function for everyone.": "Every time you claim the bounty, you also activate the Auto Rabbit Pools compounding function for all users.",
   "Auto-Compound Bounty: %fee%% of all Auto CAKE pool users pending yield": "Auto-Compound Bounty: %fee%% of all Auto Rabbit Pool users pending yield",
   "Bounty collected!": "Bounty collected!",
   "CAKE bounty has been sent to your wallet.": "Collect bounty has been sent to your wallet.",
@@ -860,32 +860,32 @@
   "Supply": "Supply",
   "Your Liquidity": "Your Liquidity",
   "Remove liquidity to receive tokens back": "Remove liquidity to receive tokens back",
-  "Trade anything. No registration, no hassle.": "Exclusive for RabbitCoin Holders",
-  "Trade any token on BNB Smart Chain in seconds, just by connecting your wallet.": "All RabbitCoin holders can earn passive income by staking and farming. Includes Rabbit LP holder.",
+  "Trade anything. No registration, no hassle.": "Exclusive perks reserved solely for RabbitCoin holders!",
+  "Trade any token on BNB Smart Chain in seconds, just by connecting your wallet.": "Unlock the allure of passive income for all RabbitCoin holders, including Rabbit LP holders, through staking and farming!",
   "Learn": "Learn",
   "BNB token": "BNB token",
   "CAKE token": "CAKE token",
   "BTC token": "BTC token",
-  "Earn passive income with crypto.": "Increase Income on Pond and Farm with RabbitCoin",
-  "PancakeSwap makes it easy to make your crypto work for you.": "Increase your APY on pools and farms using your RabbitCoin.",
+  "Earn passive income with crypto.": "Boost your earnings from the pond and farm with RabbitCoin!",
+  "PancakeSwap makes it easy to make your crypto work for you.": "Supercharge your APY across pools and farms with RabbitCoin's potent capabilities!",
   "Explore": "Explore",
   "Pie chart": "Pie chart",
   "Stocks chart": "Stocks chart",
   "Folder with cake token": "Folder with cake token",
-  "CAKE makes our world go round.": "RabbitCoin Revolutionizes Your Token Investments",
-  "CAKE token is at the heart of the PancakeSwap ecosystem. Buy it, win it, farm it, spend it, stake it... heck, you can even vote with it!": "RabbitCoin's core asset, empowers users to enjoy high APRs, and benefit from community-focused staking options. By using RabbitCoin, users can increase their income through staking.",
+  "CAKE makes our world go round.": "Experience a revolution in your token investments with RabbitCoin!",
+  "CAKE token is at the heart of the PancakeSwap ecosystem. Buy it, win it, farm it, spend it, stake it... heck, you can even vote with it!": "Harness the power of RabbitCoin's core asset to unlock high APRs and community-centered staking options, elevating your income potential through staking.",
   "Small 3d pancake": "Small 3d pancake",
   "%cakePrizeInUsd% in CAKE prizes this round": "%cakePrizeInUsd% You can sell your NFT right away.",
   "Buy tickets with CAKE, win CAKE if your numbers match": "Sell your NFTs on OpenSea, NFTrade or any other marketplace",
   "$%bnbWonInUsd% in BNB won so far": "$%bnbWonInUsd% Ready to Enter the Metaverse?",
   "Will BNB price rise or fall? guess correctly to win!": "The KEY is your ticket to fully experience Web3",
-  "And those users are now entrusting the platform with over $%tvl% in funds.": "Grow your assets: collect tokens, farm and stake or exchange your Tokens easily.",
+  "And those users are now entrusting the platform with over $%tvl% in funds.": "Watch your wealth flourish: gather tokens, delve into farming, and effortlessly stake or exchange your Tokens. Experience the thrill of financial growth, simplified for your convenience!",
   "Trusted with billions.": "of the RabbitCoin Utility Token",
-  "PancakeSwap has the most users of any decentralized platform, ever.": "Stake, trade, and experience exceptional holder benefits",
-  "Will you join them?": "Grab your RabbitCoin now!",
+  "PancakeSwap has the most users of any decentralized platform, ever.": "Engage in the exciting world of Stake, Trade, and revel in the exceptional rewards of being a token holder.",
+  "Will you join them?": "Let's grab your RabbitCoin now!",
   "$%tvl% staked": "$%tvl% earn",
-  "The moon is made of pancakes.": "Earn Passive Income with RabbitCoin",
-  "Trade, earn, and win crypto on the most popular decentralized platform in the galaxy.": "RabbitCoin is a Decentralized exchange (DEX). staking, farming or trading with ease and flexibility",
+  "The moon is made of pancakes.": "Start earning passive income with RabbitCoin today!",
+  "Trade, earn, and win crypto on the most popular decentralized platform in the galaxy.": "Dive into RabbitCoin decentralized exchange (DEX), where you can effortlessly stake, farm, or trade with unparalleled ease and flexibility, making your crypto journey seamless and rewarding!",
   "Lunar bunny": "Lunar bunny",
   "Total supply": "Total supply",
   "Burned to date": "Burned to date",
@@ -907,13 +907,13 @@
   "Connected with %address%": "Connected with %address%",
   "Win millions in prizes": "KEY 2 WEB 3",
   "%users% users": "%users% airdrop",
-  "Connect your crypto wallet to start using the app in seconds.": "Connect your crypto wallet to start using the app in seconds.",
-  "in the last 30 days": "Large selection of tokens to stake",
-  "No registration needed.": "No registration needed.",
+  "Get started with the app in seconds by connecting your crypto wallet!": "Get started with the app in seconds by connecting your crypto wallet!",
+  "in the last 30 days": "Explore our extensive array of tokens available for staking!",
+  "No registration, just connect your wallet and start using the app!": "No registration, just connect your wallet and start using the app!",
   "Learn how to start": "Learn how to start",
   "%trades% trades": "%trades% whitelist",
   "Provably fair, on-chain games.": "Your swift entry to Web3 and the Metaverse.",
-  "made in the last 30 days": "RabbitCoin owners will be whitelisted",
+  "made in the last 30 days": "RabbitCoin owners will receive exclusive whitelist privileges!",
   "Win big with PancakeSwap.": "The KEY is your all-access pass to the expansive world of Web3. Streamlining your journey, it ensures active participation in the decentralized revolution, making the vast potential of the digital realm effortlessly accessible.",
   "Copied": "Copied",
   "Make a Profile": "Make a Profile",
