--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -66,7 +66,7 @@
   "Winning Tickets": "Winning Tickets",
   "Enable Contract": "Enable Contract",
   "%asset% staked": "%asset% staked",
-  "Total Value Locked": "RabbitCoin holders collect more tokens",
+  "Total Value Locked": "RabbitCoin holders earn more tokens effortlessly!",
   "Profile Setup": "Profile Setup",
   "Get Starter Collectible": "Get Starter Collectible",
   "Set Profile Picture": "Set Profile Picture",
@@ -188,9 +188,9 @@
   "Claim": "Claim",
   "Any funds you stake in this pool will be automagically harvested and restaked (compounded) for you.": "Any funds you stake in this pool will be automagically harvested and restaked (compounded) for you.",
   "Total staked": "Total staked",
-  "Just stake some tokens to earn.": "Just stake some tokens to earn.",
-  "High APR, low risk.": "High APR, low risk.",
-  "Stake LP tokens to earn.": "Stake LP tokens to earn.",
+  "Stake LP Tokens and Watch Your Earnings Soar!": "Stake LP Tokens and Watch Your Earnings Soar!",
+  "High APR, Low Risk. Secure Your Profits with Confidence!": "High APR, Low Risk. Secure Your Profits with Confidence!",
+  "Elevate Your Earnings. Stake LP Tokens for Lucrative Rewards!": "Elevate Your Earnings. Stake LP Tokens for Lucrative Rewards!",
   "Basic Sale": "Basic Sale",
   "Unlimited Sale": "Unlimited Sale",
   "No limits on the amount you can commit. Additional fee applies when claiming.": "Each account can mint only 2 NFTs. Public minting is only available for a limited time.",
@@ -860,32 +860,32 @@
   "Supply": "Supply",
   "Your Liquidity": "Your Liquidity",
   "Remove liquidity to receive tokens back": "Remove liquidity to receive tokens back",
-  "Trade anything. No registration, no hassle.": "Exclusive for RabbitCoin Holders",
-  "Trade any token on BNB Smart Chain in seconds, just by connecting your wallet.": "All RabbitCoin holders can earn passive income by staking and farming. Includes Rabbit LP holder.",
+  "Trade anything. No registration, no hassle.": "Exclusive privileges reserved for RabbitCoin holders!",
+  "Trade any token on BNB Smart Chain in seconds, just by connecting your wallet.": "RabbitCoin offers lucrative passive income opportunities for all holders, including Rabbit LP holders, through staking and farming.",
   "Learn": "Learn",
   "BNB token": "BNB token",
   "CAKE token": "CAKE token",
   "BTC token": "BTC token",
-  "Earn passive income with crypto.": "Increase Income on Pond and Farm with RabbitCoin",
-  "PancakeSwap makes it easy to make your crypto work for you.": "Increase your APY on pools and farms using your RabbitCoin.",
+  "Earn passive income with crypto.": "Grow Your Earnings at the Pond and Farm with RabbitCoin!",
+  "PancakeSwap makes it easy to make your crypto work for you.": "Experience Incredible Growth. Amplify Your APY on Pools and Farms with RabbitCoin!",
   "Explore": "Explore",
   "Pie chart": "Pie chart",
   "Stocks chart": "Stocks chart",
   "Folder with cake token": "Folder with cake token",
-  "CAKE makes our world go round.": "RabbitCoin Revolutionizes Your Token Investments",
-  "CAKE token is at the heart of the PancakeSwap ecosystem. Buy it, win it, farm it, spend it, stake it... heck, you can even vote with it!": "RabbitCoin's core asset, empowers users to enjoy high APRs, and benefit from community-focused staking options. By using RabbitCoin, users can increase their income through staking.",
+  "CAKE makes our world go round.": "Discover the Future RabbitCoin Revolutionizing Your Token Investments!",
+  "CAKE token is at the heart of the PancakeSwap ecosystem. Buy it, win it, farm it, spend it, stake it... heck, you can even vote with it!": "Embark on a Journey to Financial Freedom. RabbitCoin's Core Asset Empowers Users with High APRs and Community-Focused Staking, Amplifying Income Potential!",
   "Small 3d pancake": "Small 3d pancake",
   "%cakePrizeInUsd% in CAKE prizes this round": "%cakePrizeInUsd% You can sell your NFT right away.",
   "Buy tickets with CAKE, win CAKE if your numbers match": "Sell your NFTs on OpenSea, NFTrade or any other marketplace",
   "$%bnbWonInUsd% in BNB won so far": "$%bnbWonInUsd% Ready to Enter the Metaverse?",
   "Will BNB price rise or fall? guess correctly to win!": "The KEY is your ticket to fully experience Web3",
-  "And those users are now entrusting the platform with over $%tvl% in funds.": "Grow your assets: collect tokens, farm and stake or exchange your Tokens easily.",
-  "Trusted with billions.": "of the RabbitCoin Utility Token",
-  "PancakeSwap has the most users of any decentralized platform, ever.": "Stake, trade, and experience exceptional holder benefits",
+  "And those users are now entrusting the platform with over $%tvl% in funds.": "Grow your assets effortlessly: collect tokens, farm, stake, or exchange seamlessly.",
+  "Trusted with billions.": "RabbitCoin's powerful utility token!",
+  "PancakeSwap has the most users of any decentralized platform, ever.": "Stake, trade, and delight in exclusive benefits as a holder!",
   "Will you join them?": "Grab your RabbitCoin now!",
   "$%tvl% staked": "$%tvl% earn",
-  "The moon is made of pancakes.": "Earn Passive Income with RabbitCoin",
-  "Trade, earn, and win crypto on the most popular decentralized platform in the galaxy.": "RabbitCoin is a Decentralized exchange (DEX). staking, farming or trading with ease and flexibility",
+  "The moon is made of pancakes.": "Unlock passive income potential with RabbitCoin!",
+  "Trade, earn, and win crypto on the most popular decentralized platform in the galaxy.": "Experience the future of decentralized finance with RabbitCoin DEX. Stake, farm, or trade with unparalleled ease and flexibility. Join us now and revolutionize your crypto journey!",
   "Lunar bunny": "Lunar bunny",
   "Total supply": "Total supply",
   "Burned to date": "Burned to date",
@@ -901,19 +901,19 @@
   "%earningsBusd% to collect": "%earningsBusd% to collect",
   "Harvest all": "Harvest all",
   "Start in seconds.": "Start in seconds.",
-  "Used by millions.": "Experience the Power",
+  "Used by millions.": "Embark on an adventure with",
   "Hi, %userName%!": "Hi, %userName%!",
   "Play": "Mint a KEY",
   "Connected with %address%": "Connected with %address%",
   "Win millions in prizes": "KEY 2 WEB 3",
   "%users% users": "%users% airdrop",
-  "Connect your crypto wallet to start using the app in seconds.": "Connect your crypto wallet to start using the app in seconds.",
-  "in the last 30 days": "Large selection of tokens to stake",
+  "Instantly Access the App by Connecting Your Crypto Wallet in Seconds!": "Instantly Access the App by Connecting Your Crypto Wallet in Seconds!",
+  "in the last 30 days": "Explore our extensive selection of tokens for staking!",
   "No registration needed.": "No registration needed.",
   "Learn how to start": "Learn how to start",
   "%trades% trades": "%trades% whitelist",
   "Provably fair, on-chain games.": "Your swift entry to Web3 and the Metaverse.",
-  "made in the last 30 days": "RabbitCoin owners will be whitelisted",
+  "made in the last 30 days": "Unlock exclusive benefits: RabbitCoin owners get whitelisted!",
   "Win big with PancakeSwap.": "The KEY is your all-access pass to the expansive world of Web3. Streamlining your journey, it ensures active participation in the decentralized revolution, making the vast potential of the digital realm effortlessly accessible.",
   "Copied": "Copied",
   "Make a Profile": "Make a Profile",
