--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -1519,7 +1519,7 @@
   "Trade the new BTT token": "Trade the new BTT token",
   "here": "here",
   "For more details on the swap, please refer here.": "For more details on the swap, please refer here.",
-  "Insufficient WBNB balance": "Insufficient WBNB balance",
+  "Insufficient WMATIC balance": "Insufficient WMATIC balance",
   "Select": "Select",
   "Confirm Limit Order": "Confirm Limit Order",
   "Limit price is 12.12% above the current market rate. The order will be executed when the market price reaches the specified limit price within the expiration date, within your slippage parameters.": "Limit price is 12.12% above the current market rate. The order will be executed when the market price reaches the specified limit price within the expiration date, within your slippage parameters.",
