--- a/public/locales/es-ES.json
+++ b/public/locales/es-ES.json
@@ -1793,7 +1793,7 @@
   "Chart": "Gráfica",
   "by": "por",
   "You’ve successfully claimed tokens back.": "Reclamaste correctamente la devolución de los tokens.",
-  "Stake CAKE to participate in IFOs": "Invierte en CAKE para participar en las IFO",
+  "Stake RabbitCoin to participate in IFOs": "Invierte en CAKE para participar en las IFO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "¡Celebra la Navidad y el Año Nuevo con nosotros! Disfruta de este maravilloso NFT elaborado por la Chef Cecy y el ganador de nuestro evento #PancakeChristmas.",
   "Chain Head Block": "Bloque de la cadena inicial",
   "Latest Subgraph Block": "Último bloque de Subgraph",
