--- a/public/locales/fr-FR.json
+++ b/public/locales/fr-FR.json
@@ -1793,7 +1793,7 @@
   "Chart": "Graphique",
   "by": "par",
   "You’ve successfully claimed tokens back.": "Vous avez récupéré vos jetons avec succès.",
-  "Stake CAKE to participate in IFOs": "Placez des CAKE pour participer aux IFO",
+  "Stake RabbitCoin to participate in IFOs": "Placez des CAKE pour participer aux IFO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Fêtons Noël et le Nouvel An ensemble ! Profitez de ce merveilleux NFT conçu par le gagnant de notre événement #PancakeChristmas, Chef Cecy.",
   "Chain Head Block": "Bloc de tête de la chaîne",
   "Latest Subgraph Block": "Dernier bloc Subgraph",
