--- a/public/locales/id-ID.json
+++ b/public/locales/id-ID.json
@@ -1793,7 +1793,7 @@
   "Chart": "Grafik",
   "by": "per",
   "You’ve successfully claimed tokens back.": "Anda telah berhasil mengeklaim token kembali.",
-  "Stake CAKE to participate in IFOs": "Tumpuk CAKE untuk berpartisipasi dalam IFO",
+  "Stake RabbitCoin to participate in IFOs": "Tumpuk CAKE untuk berpartisipasi dalam IFO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Rayakan Natal dan Tahun Baru bersama kami! Nikmati NFT mengagumkan yang merupakan hasil rancangan Chef Cecy dan pemenang acara #PancakeChristmas kami.",
   "Chain Head Block": "Blok Kepala Chain",
   "Latest Subgraph Block": "Blok Subgraf Terkini",
