--- a/public/locales/it-IT.json
+++ b/public/locales/it-IT.json
@@ -1793,7 +1793,7 @@
   "Chart": "Grafico",
   "by": "entro",
   "You’ve successfully claimed tokens back.": "Hai riscosso con successo i token.",
-  "Stake CAKE to participate in IFOs": "Fai stake di CAKE per partecipare alle IFO",
+  "Stake RabbitCoin to participate in IFOs": "Fai stake di CAKE per partecipare alle IFO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Festeggia Natale e Capodanno con noi! Goditi questo meraviglioso NFT realizzato dallo chef Cecy e dal vincitore del nostro evento #PancakeChristmas.",
   "Chain Head Block": "Blocco testa della catena",
   "Latest Subgraph Block": "Ultimo blocco sottografo",
