--- a/public/locales/ja-JP.json
+++ b/public/locales/ja-JP.json
@@ -1793,7 +1793,7 @@
   "Chart": "チャート",
   "by": " ",
   "You’ve successfully claimed tokens back.": "トークンを正常に回収しました。",
-  "Stake CAKE to participate in IFOs": "CAKEをステーキングしてIFOに参加",
+  "Stake RabbitCoin to participate in IFOs": "CAKEをステーキングしてIFOに参加",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "クリスマスと新年を一緒にお祝いしましょう！Chef Cecyと#PancakeChristmasイベントの勝者が制作したこの素晴らしいNFTをお楽しみください。",
   "Chain Head Block": "チェーンの先頭ブロック",
   "Latest Subgraph Block": "最新のサブグラフブロック",
