--- a/public/locales/ko-KR.json
+++ b/public/locales/ko-KR.json
@@ -1793,7 +1793,7 @@
   "Chart": "차트",
   "by": "-",
   "You’ve successfully claimed tokens back.": "토큰을 다시 클레임했습니다.",
-  "Stake CAKE to participate in IFOs": "IFO에 참여하려면 CAKE 예치",
+  "Stake RabbitCoin to participate in IFOs": "IFO에 참여하려면 CAKE 예치",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "함께 크리스마스와 새해를 축하하세요! #PancakeChristmas 이벤트의 우승자와 셰프 Cecy가 만든 멋진 NFT를 즐겨보세요.",
   "Chain Head Block": "체인 헤드 블록",
   "Latest Subgraph Block": "최신 서브그래프 블록",
