--- a/public/locales/pt-PT.json
+++ b/public/locales/pt-PT.json
@@ -1793,7 +1793,7 @@
   "Chart": "Gráfico",
   "by": "por",
   "You’ve successfully claimed tokens back.": "Voltou a obter os tokens com sucesso.",
-  "Stake CAKE to participate in IFOs": "Faça a participação no CAKE para participar nas IFOs",
+  "Stake RabbitCoin to participate in IFOs": "Faça a participação no CAKE para participar nas IFOs",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Comemore o Natal e o Ano Novo connosco! Desfrute deste NFT maravilhoso criado por Chef Cecy e pelo vencedor de nosso evento #PancakeChristmas.",
   "Chain Head Block": "Bloco inicial da cadeia",
   "Latest Subgraph Block": "Último bloco subgrafo",
