--- a/public/locales/ru-RU.json
+++ b/public/locales/ru-RU.json
@@ -1793,7 +1793,7 @@
   "Chart": "Диаграмма",
   "by": "—",
   "You’ve successfully claimed tokens back.": "Токены возвращены.",
-  "Stake CAKE to participate in IFOs": "Для участия в IFO вложите CAKE",
+  "Stake RabbitCoin to participate in IFOs": "Для участия в IFO вложите CAKE",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Празднуйте Рождество и Новый год вместе с нами! Посмотрите, какой прекрасный NFT приготовила Сеси и победитель нашего события #PancakeChristmas.",
   "Chain Head Block": "Головной блок блокчейна",
   "Latest Subgraph Block": "Последний блок подграфа",
