--- a/public/locales/sv-SE.json
+++ b/public/locales/sv-SE.json
@@ -1793,7 +1793,7 @@
   "Chart": "Diagram",
   "by": "av",
   "You’ve successfully claimed tokens back.": "Du har tagit tillbaka dina tokens.",
-  "Stake CAKE to participate in IFOs": "Satsa CAKE-tokens för att delta i inledande farmerbjudanden",
+  "Stake RabbitCoin to participate in IFOs": "Satsa CAKE-tokens för att delta i inledande farmerbjudanden",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Fira jul och nyår med oss! Använd denna underbara NFT som tagits fram av vår kock, Cecy, och vinnaren från vårt #PancakeChristmas-evenemang.",
   "Chain Head Block": "Huvudblockkedja",
   "Latest Subgraph Block": "Senaste kantgrafblock",
