--- a/public/locales/tr-TR.json
+++ b/public/locales/tr-TR.json
@@ -1793,7 +1793,7 @@
   "Chart": "Grafik",
   "by": "yapan",
   "You’ve successfully claimed tokens back.": "Token'ları başarıyla geri aldınız.",
-  "Stake CAKE to participate in IFOs": "IFO'lara katılmak için CAKE yatırın",
+  "Stake RabbitCoin to participate in IFOs": "IFO'lara katılmak için CAKE yatırın",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Yılbaşını bizimle birlikte kutlayın! Şef Cecy tarafından yapılan ve #PancakeYılbaşı etkinliğini kazanan bu harika NFT'nin tadını çıkarın.",
   "Chain Head Block": "Zincir Başı Bloku",
   "Latest Subgraph Block": "Son Alt Grafik Bloku",
