--- a/public/locales/uk-UA.json
+++ b/public/locales/uk-UA.json
@@ -1793,7 +1793,7 @@
   "Chart": "Діаграма",
   "by": "до",
   "You’ve successfully claimed tokens back.": "Ви отримали свої токени назад.",
-  "Stake CAKE to participate in IFOs": "Вносьте CAKE, щоб брати участь в IFO",
+  "Stake RabbitCoin to participate in IFOs": "Вносьте CAKE, щоб брати участь в IFO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Святкуймо Різдво та Новий рік разом! Ось вам чудовий невзаємозамінний токен від шеф-кухаря Сесі та переможця нашого заходу #PancakeChristmas.",
   "Chain Head Block": "Напрямний блок ланцюга",
   "Latest Subgraph Block": "Останній блок підграфу",
