--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -1793,7 +1793,7 @@
   "Chart": "图表",
   "by": "按照",
   "You’ve successfully claimed tokens back.": "您已成功领取回代币。",
-  "Stake CAKE to participate in IFOs": "质押 CAKE 以参与 IFO",
+  "Stake RabbitCoin to participate in IFOs": "质押 CAKE 以参与 IFO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "与我们一起庆祝圣诞节和新年！享受由厨师 Cecy 和我们 #PancakeChristmas 活动的获胜者制作的美妙 NFT。",
   "Chain Head Block": "链头区块",
   "Latest Subgraph Block": "最新子图区块",
