--- a/public/locales/zh-TW.json
+++ b/public/locales/zh-TW.json
@@ -1793,7 +1793,7 @@
   "Chart": "圖表",
   "by": "根據",
   "You’ve successfully claimed tokens back.": "您已成功領取回代幣。",
-  "Stake CAKE to participate in IFOs": "質押 CAKE 以參與 IFO",
+  "Stake RabbitCoin to participate in IFOs": "質押 CAKE 以參與 IFO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "與我們一起慶祝聖誕節和新年！享受由主廚 Cecy 和我們 #PancakeChristmas 活動的獲勝者製作的美妙 NFT。",
   "Chain Head Block": "鏈頭區塊",
   "Latest Subgraph Block": "最新子圖區塊",
