--- a/public/locales/ar-SA.json
+++ b/public/locales/ar-SA.json
@@ -1793,7 +1793,7 @@
   "Chart": "المخطط",
   "by": "بواسطة",
   "You’ve successfully claimed tokens back.": "لقد نجحت في استعادة الرموز.",
-  "Stake RabbitCoin to participate in IFOs": "ارهن CAKE للمشاركة في العروض الأولية للمزرعة (IFO)",
+  "Stake CAKE to participate in IFOs": "ارهن CAKE للمشاركة في العروض الأولية للمزرعة (IFO)",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "احتفل بالكريسماس والعام الجديد معنا! استمتع بـ NFT الرائعة هذه التي أنشأها Chef Cecy والفائز في حدث #PancakeChristmas.",
   "Chain Head Block": "كتلة رأس السلسلة",
   "Latest Subgraph Block": "آخر كتلة للرسم البياني الفرعي",
