--- a/public/locales/de-DE.json
+++ b/public/locales/de-DE.json
@@ -1793,7 +1793,7 @@
   "Chart": "Diagramm",
   "by": "von",
   "You’ve successfully claimed tokens back.": "Sie haben erfolgreich Tokens zurückgefordert.",
-  "Stake RabbitCoin to participate in IFOs": "Setzen Sie CAKE ein, um an IFOs teilzunehmen",
+  "Stake CAKE to participate in IFOs": "Setzen Sie CAKE ein, um an IFOs teilzunehmen",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Feiern Sie Weihnachten und Neujahr mit uns! Genießen Sie dieses wunderbare NFT von Chef Cecy und dem Gewinner/der Gewinnerin unseres #PancakeChristmas-Events.",
   "Chain Head Block": "Chain Head Block",
   "Latest Subgraph Block": "Letzter Subgraph Block",
