--- a/public/locales/el-GR.json
+++ b/public/locales/el-GR.json
@@ -1793,7 +1793,7 @@
   "Chart": "Γράφημα",
   "by": "από",
   "You’ve successfully claimed tokens back.": "Έχετε διεκδικήσει με επιτυχία την επιστροφή των νομισμάτων.",
-  "Stake RabbitCoin to participate in IFOs": "Κάντε stake CAKE για να συμμετέχετε σε IFO",
+  "Stake CAKE to participate in IFOs": "Κάντε stake CAKE για να συμμετέχετε σε IFO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Γιορτάστε μαζί μας τα Χριστούγεννα και την Πρωτοχρονιά! Απολαύστε αυτό το υπέροχο NFT φιλοτεχνημένο από την Chef Cecy και το νικητή της εκδήλωσης #PancakeChristmas.",
   "Chain Head Block": "Κεντρικό μπλοκ αλυσίδας",
   "Latest Subgraph Block": "Πιο πρόσφατο μπλοκ υπογραφήματος",
