--- a/public/locales/fi-FI.json
+++ b/public/locales/fi-FI.json
@@ -1793,7 +1793,7 @@
   "Chart": "Kaavio",
   "by": "–",
   "You’ve successfully claimed tokens back.": "Olet lunastanut polettisi takaisin.",
-  "Stake RabbitCoin to participate in IFOs": "Panosta CAKE-poletteja osallistuaksesi IFO:ihin",
+  "Stake CAKE to participate in IFOs": "Panosta CAKE-poletteja osallistuaksesi IFO:ihin",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Juhlista joulua ja uutta vuotta seurassamme! Nauti tästä mahtavasta NFT:stä, jonka on luonut Chef Cecy ja #PancakeChristmas-tapahtumamme voittaja.",
   "Chain Head Block": "Ketjupäälohko",
   "Latest Subgraph Block": "Viimeisin aligraafilohko",
