--- a/public/locales/fil-PH.json
+++ b/public/locales/fil-PH.json
@@ -1793,7 +1793,7 @@
   "Chart": "Chart",
   "by": "ayon sa",
   "You’ve successfully claimed tokens back.": "Matagumpay mong na-claim ulit ang mga token.",
-  "Stake RabbitCoin to participate in IFOs": "Mag-stake ng CAKE para sumali sa mga IFO",
+  "Stake CAKE to participate in IFOs": "Mag-stake ng CAKE para sumali sa mga IFO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Magdiwang ng Pasko at Bagong Taon kasama kami! I-enjoy ang napakagandang NFT na ito na ginawa ni Chef Cecy at ang nanalo sa event natin na #PancakeChristmas.",
   "Chain Head Block": "Block ng Chain Head",
   "Latest Subgraph Block": "Pinakabagong Block ng Subgraph",
