--- a/public/locales/hi-IN.json
+++ b/public/locales/hi-IN.json
@@ -1793,7 +1793,7 @@
   "Chart": "चार्ट",
   "by": "के अनुसार",
   "You’ve successfully claimed tokens back.": "आपने टोकन को सफलतापूर्वक वापस क्लेम कर लिया है।",
-  "Stake RabbitCoin to participate in IFOs": "IFO में भाग लेने के लिए CAKE को स्टेक करें",
+  "Stake CAKE to participate in IFOs": "IFO में भाग लेने के लिए CAKE को स्टेक करें",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "हमारे साथ क्रिसमस और नववर्ष की खुशियां मनाएं! Chef Cecy द्वारा बनाए गए इस अनोखे NFT का और हमारे #PancakeChristmas इवेंट के विजेता के साथ आनंद लें।",
   "Chain Head Block": "चेन हेड ब्लॉक",
   "Latest Subgraph Block": "नवीनतम सबग्राफ़ ब्लॉक",
