--- a/public/locales/hu-HU.json
+++ b/public/locales/hu-HU.json
@@ -1793,7 +1793,7 @@
   "Chart": "Grafikon",
   "by": "készítette:",
   "You’ve successfully claimed tokens back.": "Sikeresen visszaigényelted a zsetonokat.",
-  "Stake RabbitCoin to participate in IFOs": "Tegyél fel CAKE tétet, hogy részt vegyél az IFO ajánlásokban",
+  "Stake CAKE to participate in IFOs": "Tegyél fel CAKE tétet, hogy részt vegyél az IFO ajánlásokban",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Ünnepeld velünk a karácsonyt és az új évet! Élvezd ezt a csodálatos NFT-t, amelyet Cecy séf és a #PancakeChristmas eseményünk nyertese készített.",
   "Chain Head Block": "Láncfej blokk",
   "Latest Subgraph Block": "Legújabb részgráf blokk",
