--- a/public/locales/nl-NL.json
+++ b/public/locales/nl-NL.json
@@ -1793,7 +1793,7 @@
   "Chart": "Grafiek",
   "by": "op",
   "You’ve successfully claimed tokens back.": "Je hebt succesvol je tokens terug geclaimd.",
-  "Stake RabbitCoin to participate in IFOs": "Stake CAKE om deel te nemen aan IFO's",
+  "Stake CAKE to participate in IFOs": "Stake CAKE om deel te nemen aan IFO's",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Vier Kerst en Nieuwjaar met ons! Geniet van deze geweldige NFT gemaakt door Chef Cecy en de winnaar van ons #PancakeChristmas-evenement.",
   "Chain Head Block": "Kettinghoofdblok",
   "Latest Subgraph Block": "Nieuwste Subgraph-blok",
