--- a/public/locales/pl-PL.json
+++ b/public/locales/pl-PL.json
@@ -1793,7 +1793,7 @@
   "Chart": "Wykres",
   "by": "według",
   "You’ve successfully claimed tokens back.": "Tokeny zostały odebrane.",
-  "Stake RabbitCoin to participate in IFOs": "Stakuj CAKE, aby brać udział w IFO",
+  "Stake CAKE to participate in IFOs": "Stakuj CAKE, aby brać udział w IFO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Świętuj z nami Boże Narodzenie i Nowy Rok! Ciesz się tym wspaniałym NFT przygotowanym przez szefa kuchni Cecy i zwycięzcę z naszego wydarzenia #PancakeChristmas.",
   "Chain Head Block": "Blok początkowy łańcucha",
   "Latest Subgraph Block": "Najnowszy blok podgrafu",
