--- a/public/locales/pt-BR.json
+++ b/public/locales/pt-BR.json
@@ -1793,7 +1793,7 @@
   "Chart": "Gráfico",
   "by": "por",
   "You’ve successfully claimed tokens back.": "Você reivindicou tokens com sucesso.",
-  "Stake RabbitCoin to participate in IFOs": "Faça o stake do CAKE para participar nas IFOs",
+  "Stake CAKE to participate in IFOs": "Faça o stake do CAKE para participar nas IFOs",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Comemore o Natal e o Ano Novo conosco! Desfrute deste NFT maravilhoso criada por Chef Cecy e o vencedor de nosso evento #PancakeChristmas.",
   "Chain Head Block": "Livro-razão do bitcoin principal",
   "Latest Subgraph Block": "Último bloco subgrafo",
