--- a/public/locales/ta-IN.json
+++ b/public/locales/ta-IN.json
@@ -1793,7 +1793,7 @@
   "Chart": "அட்டவணை",
   "by": "ஆல்",
   "You’ve successfully claimed tokens back.": "நீங்கள் வெற்றிகரமாக டோக்கன்களைத் திரும்பக் கிளைம் செய்துள்ளீர்கள்.",
-  "Stake RabbitCoin to participate in IFOs": "IFOகளில் பங்கேற்க CAKE-ஐ ஸ்டேக் செய்யவும்",
+  "Stake CAKE to participate in IFOs": "IFOகளில் பங்கேற்க CAKE-ஐ ஸ்டேக் செய்யவும்",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "எங்களுடன் கிறிஸ்துமஸையும் புத்தாண்டையும் கொண்டாடுங்கள்! செஃப் செசி மற்றும் எங்கள் #PancakeChristmas நிகழ்வின் வெற்றியாளரால் வடிவமைக்கப்பட்ட இந்த அற்புதமான NFTயை அனுபவித்திடுங்கள்.",
   "Chain Head Block": "செயின் ஹெட் ப்ளாக்",
   "Latest Subgraph Block": "சமீபத்திய சப்கிராஃப் ப்ளாக்",
