--- a/public/locales/vi-VN.json
+++ b/public/locales/vi-VN.json
@@ -1793,7 +1793,7 @@
   "Chart": "Biểu đồ",
   "by": "bởi",
   "You’ve successfully claimed tokens back.": "Bạn đã nhận lại token thành công.",
-  "Stake RabbitCoin to participate in IFOs": "Đặt cọc CAKE để tham gia IFO",
+  "Stake CAKE to participate in IFOs": "Đặt cọc CAKE để tham gia IFO",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Hãy đón Noel và Năm mới cùng chúng tôi! Hãy tận hưởng NFT tuyệt vời này, được sáng tác bởi Chef Cecy, người chiến thắng trong sự kiện #PancakeChristmas của chúng tôi.",
   "Chain Head Block": "Khối đầu chuỗi",
   "Latest Subgraph Block": "Khối biểu đồ con mới nhất",
