--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -1431,7 +1431,7 @@
   "Chart": "Chart",
   "by": "by",
   "You’ve successfully claimed tokens back.": "You’ve successfully claimed tokens back.",
-  "Stake RabbitCoin to participate in IFOs": "Stake RabbitCoin to participate in IFOs",
+  "Stake CAKE to participate in IFOs": "Stake CAKE to participate in IFOs",
   "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.": "Celebrate Christmas and New Year with us! Enjoy this wonderful NFT crafted by Chef Cecy and the winner from our #PancakeChristmas event.",
   "Chain Head Block": "Chain Head Block",
   "Latest Subgraph Block": "Latest Subgraph Block",
