--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -12,7 +12,7 @@
   "Coming Soon": "Coming Soon",
   "APY": "APY",
   "Total Liquidity": "Total Liquidity",
-  "View on BscScan": "View on BscScan",
+  "View on Polygonscan": "View on Polygonscan",
   "Finished": "Finished",
   "Project Site": "Project Site",
   "See Token Info": "See Token Info",
